# Canary

./: .gitignore  README.md  index.html  pyproject.toml
branding/: BRAND.md  app-orchard-listing.md  theme.css
branding/logo/: README.md
branding/tokens/: colors.css  tokens.json
cannabis_canary/: __init__.py
cannabis_canary/cds/: __init__.py  content.py  services.py
cannabis_canary/dosage/: __init__.py  bioavailability.py  calculator.py  models.py
cannabis_canary/evidence/: __init__.py  journals.py  pubmed.py  references.py
cannabis_canary/instrument/: __init__.py  definition.py  validation.py
cannabis_canary/registry/: __init__.py  db.py  models.py  repo.py
cannabis_canary/reminder/: __init__.py  schedule.py
cannabis_canary/smart/: __init__.py  context.py  fhir_client.py  oauth.py
cannabis_canary/viz/: __init__.py  trend_svg.py
cannabis_canary/web/: __init__.py  app.py  config.py  demo.py  sessions.py
cannabis_canary/web/templates/: form.html
docs/: PHASE-2-ROADMAP.md  epic-submission-checklist.md
docs/superpowers/plans/: 2026-06-29-cannabis-canary-dosage-calculator.md
docs/superpowers/specs/: 2026-06-29-cannabis-canary-v1-design.md  (+1 more)
tests/cds/: test_cds.py
tests/dosage/: test_bioavailability.py  test_calculator.py  test_compute_dose.py  test_models.py
tests/evidence/: test_evidence.py
tests/instrument/: test_definition.py  test_validation.py
tests/registry/: test_repo.py
tests/reminder/: test_schedule.py
tests/smart/: test_fhir_and_context.py  test_oauth.py
tests/viz/: test_trend_svg.py
tests/web/: test_app.py
