[project]
name = "cannabis-canary"
version = "0.1.0"
description = "Cannabis Canary© — prospective cannabis social-history registry & point-of-care decision support for Epic/Cerner (SMART on FHIR + CDS Hooks)."
requires-python = ">=3.11"

[project.optional-dependencies]
app = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
]
dev = ["pytest>=8.0", "cannabis-canary[app]"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cannabis_canary*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
